deployment/Components/Infra.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: web
  name: web
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: core
  name: core
