deployment/Components/Web-Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: web
    labels:
      name: web
