deployment/Components/Core-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels: null
  name: timeestimator
  namespace: core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timeestimator
  template:
    metadata:
      labels:
        app: timeestimator
    spec:
      containers:
      - image: cxd9974/msc_timeestimator:latest
        name: timeestimator
        ports:
        - containerPort: 5672
