deployment/Components/Core1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 labels: null
 name: taskscheduler
 namespace: core
spec:
 replicas: 1
 selector:
   matchLabels:
     app: taskscheduler
 template:
   metadata:
     labels:
       app: taskscheduler
   spec:
     containers:
     - image: cxd9974/msc_taskscheduler:latest
       name: taskscheduler
       ports:
       - containerPort: 5672
