deployment/Components/Web-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: webplayer
    namespace: web
    labels:
spec:
    replicas: 1
    selector:
      matchLabels:
        app: webplayer
    template:
        metadata:
          labels:
            app: webplayer
        spec:
            containers:
            - name: webplayer
              image: cxd9974/msc_web:latest
              ports:
              - containerPort: 3000
