deployment/Components/Worker.yaml
### Test in core first, then we could move to dedicated namespace later
apiVersion: apps/v1
kind: Deployment
metadata:
  labels: null
  name: worker
  namespace: core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      volumes:
        - name: repodir
          persistentVolumeClaim:
            claimName: repo-pvc
        - name: outdir
          persistentVolumeClaim:
            claimName: out-pvc
      containers:
      - image: cxd9974/msc_worker:latest
        name: worker
        ports:
        - containerPort: 3000
        volumeMounts:
          - mountPath: /repodir
            name: repodir
          - mountPath: /outdir
            name: outdir
      imagePullSecrets:
      - name: regcred
