deployment/Components/Web-Service.yaml
apiVersion: v1
kind: Service
metadata:
    name: webplayer
    namespace: web
spec:
    selector:
      app: webplayer
    ports:
      - protocol: TCP
        port: 80
        targetPort: 3000
    type: LoadBalancer
