deployment/Components/Web-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webplayer-ingress
  namespace: web

spec:
  rules:
    - host: mynodeapp.com
      http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: webplayer
                port:
                  number: 80
